--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "type": "module",
     "dependencies": {
         "@apollo/server": "^4.10.3",
-        "express": "^4.19.2",
-        "express-jwt":"8.4.1",
-        "jsonwebtoken": "9.0.2",
-        "graphql": "16.8.1",
+        "@graphql-tools/schema": "^10.0.3",
         "better-sqlite3": "9.5.0",
+        "cors": "2.8.5",
+        "express": "^4.19.2",
+        "express-jwt": "8.4.1",
+        "graphql": "16.8.1",
+        "graphql-subscriptions": "^2.0.0",
+        "graphql-ws": "^5.16.0",
+        "jsonwebtoken": "9.0.2",
         "knex": "3.1.0",
         "nanoid": "5.0.7",
-        "cors":"2.8.5"
+        "ws": "^8.17.0"
     }
 }
